--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,15 +48,10 @@ body {
 /* Portrait layout (default) */
 .app {
     //background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-	background-color:white;
-    //position:absolute;             /* position in the center of the screen */
-    //left:50%;
-    //top:50%;
-    //height:100px;                   /* text area height */
-    //width:100%;                   /* text area width */
+	//background-color:white;
     text-align:center;
     // padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin: 10px 10px 10px 10px;  /* offset vertical: half of image height and text area height */
+    //margin: 10px 10px 10px 10px;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
 }
 
@@ -149,10 +144,22 @@ h1 {
 
 
 /*Geolocation Section */
-.mapSection {
-	
+#mapSection {
+	wudth: 100%;
+	height: 100%;
 }
 
 #noInternet, #mapSection {
+	display: none;
+}
+
+/* Camera Section */
+#capturedImage {
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+#foot {
 	display: none;
 }
