--- a/www/css/index.css
+++ b/www/css/index.css
@@ -50,12 +50,9 @@ body {
     //background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
 	//background-color:white;
     text-align:center;
-    // padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    //margin: 10px 10px 10px 10px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
 }
 
-#wrapper {
+.wrapper {
 	width:100%;
 	height:100%;
 	//background-color:green;
@@ -162,4 +159,9 @@ h1 {
 
 #foot {
 	display: none;
+}
+
+/* Accelerometer Section */
+#myCanvas {
+	
 }
